--- a/style.css
+++ b/style.css
@@ -7,4 +7,8 @@ body {
   margin: 0;
   padding: 0;
   background-color: #6c761c;
+}
+
+.welkom-title {
+  margin-top: 250px;
 }/*# sourceMappingURL=style.css.map */
