--- a/loginstyle.css
+++ b/loginstyle.css
@@ -1,5 +1,5 @@
   body {
-    background-color: #6c761c;
+    background-color: #0047AB;
     display: flex;
     justify-content: center;
     align-items: center;
