--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@ $font: 'Poppins',
 sans-serif;
 
 $color1:#ffffff;
-$color2:#6c761c;
+$color2:#0047AB;
 $color3:#06424d;
 $color4:#B9Bab5;
 
@@ -28,7 +28,26 @@ margin-top: inherit;
     @media only screen and (min-width: 800px) {
 margin-top: 150px;
 max-width: 30%;
+color: $color1;
+font-weight: 400;
     }
 }
 
+.navbar{
+    border-radius: inherit !important;
+}
 
+.footer-top{
+    display: flex;
+    flex-direction: column;
+    }
+    
+footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: $color1;
+    color: $color3;
+    text-align: center;
+}
