--- a/style.scss
+++ b/style.scss
@@ -51,3 +51,7 @@ footer{
     color: $color3;
     text-align: center;
 }
+
+.goog-te-gadget-simple .goog-te-gadget-icon {
+    display: none !important;
+}
