--- a/style.css
+++ b/style.css
@@ -39,3 +39,7 @@ footer {
   color: #06424d;
   text-align: center;
 }/*# sourceMappingURL=style.css.map */
+
+.mb-3 {
+  margin-bottom: 15px; /* Pas deze waarde aan naar wens */
+}
