--- a/loginstyle.css
+++ b/loginstyle.css
@@ -1,58 +1,124 @@
-* {
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
-  font-size: 16px;
+  body {
+    background-color: #0047AB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
 }
-body {
-  background-color: #435165;
+
+.navbar {
+    width: 100%;
+    background-color:  #ffffff;
+    overflow: auto;
+  }
+  
+  .navbar a {
+    float: none;
+    padding: 15px;
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .navbar a:hover {
+    background-color: #000;
+  }
+  
+  .active {
+    background-color: rgb(35, 174, 202);
+  }
+  
+  @media screen and (max-width: 500px) {
+    .navbar a {
+      float: none;
+      display: block;
+    }
+  }
+
+*{
+    box-sizing: padding-box;
 }
-.login {
-  width: 400px;
-  background-color: #ffffff;
-  box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
-  margin: 100px auto;
+
+form {
+    width: 400px;
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    border-radius: 20px;
 }
-.login h1 {
-  text-align: center;
-  color: #5b6574;
-  font-size: 24px;
-  padding: 20px 0 20px 0;
-  border-bottom: 1px solid #dee0e4;
+
+p {
+    text-align: center;
+    margin-bottom: 50px;
+    color: #06424d;
+    
+
 }
-.login form {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-top: 20px;
+
+h2 {
+    text-align: center;
+    margin-bottom: 40px;
+    color: #06424d;
+    
+
 }
-.login form label {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  background-color: #3274d6;
-  color: #ffffff;
+
+input {
+    display: block;
+    border: 2px solid #ccc;
+    width: 95%;
+    padding: 10px;
+    margin: 10px auto;
+    border-radius: 5px;
+
 }
-.login form input[type="password"], .login form input[type="text"] {
-  width: 310px;
-  height: 50px;
-  border: 1px solid #dee0e4;
-  margin-bottom: 20px;
-  padding: 0 15px;
+
+label {
+    color: #888;
+    font-size: 18px;
+    padding: 10px;
 }
-.login form input[type="submit"] {
-  width: 100%;
-  padding: 15px;
- margin-top: 20px;
-  background-color: #3274d6;
-  border: 0;
-  cursor: pointer;
-  font-weight: bold;
-  color: #ffffff;
-  transition: background-color 0.2s;
+
+button {
+    float: center;
+    background: rgb(35, 174, 202);
+    padding: 10px 15px;
+    color: #fff;
+    border-radius: 5px;
+    margin-right: 10px;
+    border: none;
+
 }
-.login form input[type="submit"]:hover {
-background-color: #2868c7;
-  transition: background-color 0.2s;
+
+button:hover{
+    opacity: .10;
+}
+
+.error {
+   background: #F2DEDE;
+   color: #0c0101;
+   padding: 10px;
+   width: 95%;
+   border-radius: 5px;
+   margin: 20px auto;
+}
+
+h1 {
+    text-align: center;
+    color: #06424d;
+}
+
+a {
+    float: right;
+    background: #06424d;
+    padding: 10px 15px;
+    color: #fff;
+    border-radius: 10px;
+    margin-right: 10px;
+    border: none;
+    text-decoration: none;
+}
+
+a:hover{
+    opacity: .7;
 }
