--- a/EditAccountStyleshet.css
+++ b/EditAccountStyleshet.css
@@ -69,5 +69,15 @@ body {
 }
 
 .p-4 {
-    padding: 1.5rem!important;
+    padding: 2.5rem 1.5rem!important
+}
+
+.mb-3 {
+    margin-bottom: 15px; /* Pas deze waarde aan naar wens */
+  }
+
+.thumbnail img {
+    max-height: 150px;
+    width: 100%;
+    border-radius: 3px;
 }
