--- a/loginstyle.css
+++ b/loginstyle.css
@@ -1,10 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
+  font-family:'Poppins', sans-serif !important;
   font-size: 16px;
 }
 body {
   background-color: #435165;
+  
 }
 .login {
   width: 400px;
